--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <strong>We're sorry but marked_entities doesn't work properly without JavaScript
         enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div data-id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
