перешла на кнопки

--- a/public/script.html
+++ b/public/script.html
@@ -27,22 +27,17 @@
         <div class="main__checkboxes">
           <ul class="checkboxes-list" data-selector="checkbox-list">
             <li class="checkboxes-list__item">
-              <label class="checkboxes-list__label" for="id1" data-class="class1">
-                <input type="checkbox" data-selector="checkbox" id="id1" />
-                География
-              </label>
+              <button data-selector="buttons" data-class="class1">
+                География</button>
             </li>
             <li class="checkboxes-list__item">
-              <label class="checkboxes-list__label" for="id2" data-class="class2">
-                <input type="checkbox" data-selector="checkbox" id="id2" />
-                Иероглифы
-              </label>
+              <button data-selector="buttons" data-class="class2">
+                Иероглифы</button>
             </li>
             <li class="checkboxes-list__item">
-              <label class="checkboxes-list__label" for="id3" data-class="class3">
-                <input type="checkbox" data-selector="checkbox" id="id3" />
+              <button data-selector="buttons" data-class="class3">
                 География и иероглифы
-              </label>
+              </button>
             </li>
           </ul>
         </div>
