пока на этом остановимся

--- a/public/script.html
+++ b/public/script.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-language" content="ru" />
     <title>script</title>
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdn.jsdelivr.net/mark.js/8.6.0/mark.min.js"></script>
   </head>
 
   <body>
