полчилось через Document.execCommand()

--- a/public/script.html
+++ b/public/script.html
@@ -11,7 +11,7 @@
   <body>
     <div class="main__wrapper">
       <div class="main">
-        <div class="main__text" data-selector="text-div">
+        <div class="main__text" data-selector="text-div" contenteditable="true">
           При транскрибировании терминов корейской топонимики односложные номенклатурные
           термины, за некоторыми исключениями, сохраняются в транскрипции. Они пишутся
           слитно с собственным названием и повторяются также в переводе; например: 한강 —
