сделала через hiliteColor

--- a/public/script.html
+++ b/public/script.html
@@ -28,21 +28,21 @@
           <ul class="checkboxes-list" data-selector="checkbox-list">
             <li class="checkboxes-list__item">
               <button data-selector="buttons"
-                      data-color="#fa8072808"
+                      data-color="rgba(250, 128, 114, 0.5)"
                       data-name="geography">
                 География
               </button>
             </li>
             <li class="checkboxes-list__item">
               <button data-selector="buttons"
-                      data-color="#9acd3280"
+                      data-color="rgba(154, 205, 50, 0.5)"
                       data-name="hieroglyphs">
                 Иероглифы
               </button>
             </li>
             <li class="checkboxes-list__item">
               <button data-selector="buttons"
-                      data-color="#ffd70080"
+                      data-color="rgba(255, 215, 0, 0.5)"
                       data-name="geography and hieroglyphs">
                 География и иероглифы
               </button>
