переделываю на вью

--- a/public/script.html
+++ b/public/script.html
@@ -21,7 +21,7 @@
           уезда (읍), волость (면): 김해시 — город Кимхэ, 평창군 — уезд Пхёнчхан, 수영구 —
           район Суён, 흥해읍 — уездный город Хынхэ, 철마면 — волость Чхольма. Однако в
           сочетании с односложными названиями они всегда передаются в транскрипции: 동면 —
-          волость Тонмён, 북구 — район Пукку.[2]
+          волость Тонмён, 북구 — район Пукку.
         </div>
 
         <div class="main__checkboxes">
