сделала убирание обёртки

--- a/public/script.html
+++ b/public/script.html
@@ -27,24 +27,32 @@
         <div class="main__checkboxes">
           <ul class="checkboxes-list" data-selector="checkbox-list">
             <li class="checkboxes-list__item">
-              <button data-selector="buttons"
+              <button type="button"
+                      data-selector="buttons"
                       data-class="mark-yellow"
                       data-name="geography">
                 География
               </button>
             </li>
             <li class="checkboxes-list__item">
-              <button data-selector="buttons"
+              <button type="button"
+                      data-selector="buttons"
                       data-class="mark-green"
                       data-name="hieroglyphs">
                 Иероглифы
               </button>
             </li>
             <li class="checkboxes-list__item">
-              <button data-selector="buttons"
+              <button type="button"
+                      data-selector="buttons"
                       data-class="mark-red"
                       data-name="geography and hieroglyphs">
                 География и иероглифы
+              </button>
+            </li>
+            <li>
+              <button type="button" data-selector="btn-delete">
+                Убрать обёртку
               </button>
             </li>
           </ul>
